--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Pods/Pods.xcodeproj/xcuserdata/flintpham.xcuserdatad/xcschemes/xcschememanagemen
 QuanTro.xcodeproj/xcuserdata/flintpham.xcuserdatad/xcschemes/xcschememanagement.plist
 QuanTro.xcworkspace/xcuserdata/flintpham.xcuserdatad/UserInterfaceState.xcuserstate
 QuanTro.xcworkspace/xcuserdata/flintpham.xcuserdatad/xcdebugger/Expressions.xcexplist
+*.xcuserstate
