--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 
-*.plist
 Pods/Pods.xcodeproj/xcuserdata/flintpham.xcuserdatad/xcschemes/xcschememanagement.plist
 QuanTro.xcodeproj/xcuserdata/flintpham.xcuserdatad/xcschemes/xcschememanagement.plist
 QuanTro.xcworkspace/xcuserdata/flintpham.xcuserdatad/UserInterfaceState.xcuserstate
 QuanTro.xcworkspace/xcuserdata/flintpham.xcuserdatad/xcdebugger/Expressions.xcexplist
 *.xcuserstate
+Pods/Pods.xcodeproj/xcuserdata/flintpham.xcuserdatad/xcschemes/xcschememanagement.plist
+QuanTro.xcodeproj/xcuserdata/flintpham.xcuserdatad/xcschemes/xcschememanagement.plist
+QuanTro.xcworkspace/xcuserdata/flintpham.xcuserdatad/UserInterfaceState.xcuserstate
